add news list from worldometers

--- a/worldometers/templates/worldometers/index.html
+++ b/worldometers/templates/worldometers/index.html
@@ -32,7 +32,11 @@
                 </div>
             </div>
         </div>
-        <div id="table">
+        <div id="table"></div>
+        <div id="news">
+            <button class='nextPage'>Next Page</button><button class='PrevPage'>Previous Page</button>
+            <input class='pageNumber' value=0 hidden>
+            <div class="news_list"></div>
         </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript"
